style.css
html,
body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}

html {
    height: 100%;
    width: 100%;
    font-family: 'Slabo 27px', serif;
    font-size: 1.5vw;
    color: white;
}

.mainpage-sections-banner {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    width: 99%;
    text-align: center;
    background-color: #42a593;
}

.mainpage-sections-banner .logo img {
    height: 8vw;
}

.mainpage-sections-banner .title {
    font-size: 2vw;
}

.mainpage-sections-banner .contact {
    display: flex;
    align-items: end;
    flex-direction: column;
}

.mainpage-sections {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100vh;
}

.mainpage-sections-top {
    display: flex;
    flex-direction: row;
    width: 100vw;
    height: 40vw;
}

.main-top-left {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #42a593;
    margin: 10px 0px 10px 0px;
    border-radius: 0% 5% 5% 0%;
    width: 50%;
}

.main-top-left p {
    width: 80%;
    animation: fadeIn 1.5s;
}

.image-gallery {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    margin: 18px;
}

.image-gallery img {
    max-width: 100%;
    border-radius: 5%;
    height: 28vw;
}

.mainpage-sections-middle {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5% 0% 0% 5%;
    background-color: #42a593;
    height: 40vw;
    width: 50vw;
}

.mainpage-sections-middle p {
    width: 60%;
    animation: fadeIn 1.5s;
}

.mainpage-sections-bottom {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #42a593;
    border-radius: 5%;
    margin: 10px;
    width: 50%;
    height: 40vw;
}

.mainpage-sections-bottom p {
    width: 80%;
}

.bottom-page-bar {
    background-color: #42a593;
    padding: 10px;
    width: 100%;
    height: 50px;
}


@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

